--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <!--section 5 starts   here-->
     <div class="section5">
         <div class="section5_platforuma_background">
-            <p>Platfo <br>foruma </p>
+            <p>Platfo <br>forum </p>
             
         </div>
         <div class="stats">
